--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -15,6 +15,9 @@ body {
 	min-width: 320px;
 	color: $secondary-black;
 }
+#__next {
+	overflow-x: hidden;
+}
 
 a {
 	color: inherit;
@@ -79,9 +82,7 @@ form {
 		align-items: center;
 	}
 }
-main {
-	overflow-x: hidden;
-}
+
 input,
 textarea {
 	background-color: transparent;
